// Copyright 2018 Intel Corp. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package api;

message PodInformation {
	string podName = 1;
	string podNamespace = 2;
}

message DeviceInformation {
	repeated VfInformation VFs = 1;
}

message VfInformation {
	string pciaddr = 3;
	string pfname = 1;
	int32 vfid = 2;
}

service SendPodInformation {
	rpc SendPodInformation(PodInformation) returns (DeviceInformation) {}
}